istio-ingress/mesh-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: mesh-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "harbor.alpha.phac.gc.ca"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
      - "harbor.alpha.phac.gc.ca"
    tls:
      mode: SIMPLE
      credentialName: tlskeys
      minProtocolVersion: TLSV1_3
